update to index.js and index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body onload="splash(3200)" style="background-color:#000000;">
+<body onload="splash(3500)" style="background-color:#000000;">
     <!--SPLASH SCREEN-->
     <div id="splashscreen" class="loader">
         <br>
@@ -146,7 +146,7 @@
                 <br>
                 <div class="text-center">
                     <button id="resume" type="button" class="btn btn-dark btn-lg toggle-text">
-                        Resume . . .
+                        Résumé . . .
                     </button>
                 </div>
                 <br>
@@ -246,10 +246,10 @@
                     <li>Exceptional written and oral communication skills developed from engagement in team-based professional
                         projects
                     </li>
-                    <li>Experience building, programming and applying iterative and recursive algorithms for Data Validation</li>
+                    <li>Experience building, programming and applying iterative and recursive algorithms for data validation</li>
                     <li>In-depth problem-solving skills and iterative design strengthened through engineering design projects</li>
-                    <li>Developed scalable wesbites and web applications for optimized cross-platform performance</li>
-                    <li>Experienced in MS Office suite</li>
+                    <li>Developed scalable wesbites for optimized cross-platform performance</li>
+                    <li>Experienced using a variety of front-end, back-end and query languages for professional projects</li>
                 </ul>
             </div>
         </div>
@@ -274,7 +274,7 @@
                     <li>Spearheaded multiple initiatives to gamify learning for children aged 8-14</li>
                 </ul>
                 <!--EMPLOYEMENT 3-->
-                <b>Boating Specalist at e Parc de la Rivière des Milles Iles</b>
+                <b>Boating Specalist at le Parc de la Rivière des Milles Iles</b>
                 <ul>
                     <li>Worked in francophone environment - comfortably guided customers and administrated park services</li>
                     <li>Excellent time management skills used to balance instruction of large volumes of customers in kayak/canoeing
@@ -291,11 +291,13 @@
                 <!--PYNN DEVELOPMENT-->
                 <b>Pynn Development 0.1</b>
                 <ul>
-                    <li>Pynn is a multimedia, socialmedia experience sharing platfrom currently in the critical development phase</li>
+                    <li>Pynn is a multimedia, socialmedia experience sharing platfrom currently in the critical
+                        <b>development phase</b>
+                    </li>
                     <li>Pynn leverages Android Studio's scalable IntelliJ Java platform to deliver multimedia content to adventure-driven
                         users seeking what our beautiful world has to offer</li>
                     <li>
-                        <a href="404_go_error.html">Learn more about how Pynn will change the way we share experiences</a>
+                        <a id="moreAboutPynn">Learn more about how Pynn will change the way we share experiences</a>
                     </li>
                 </ul>
                 <!--rubikGO-->
@@ -303,7 +305,8 @@
                 <ul>
                     <li>A program designed to solve any combination of a rubik cube</li>
                     <li>rubikGo will leverage the low-level structure of C++ to deliver lighting-fast execiton</li>
-                    <li>rubikGo is in the system architecture stage and will be transitioning to software development</li>
+                    <li>rubikGo is in the
+                        <b>system architecture</b> stage and will be transitioning to software development</li>
                 </ul>
                 <!--GANGL-->
                 <b>Gangl</b>
@@ -312,7 +315,7 @@
                     <li>Gangl manages and structures student's worloads into a simple user-centered platform</li>
                     <li>
                         <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">Watch the Gangl Team's design process</a> or
-                        <a href="404_go_error.html">click here</a> to learn more about Gangl</li>
+                        <a id="moreAboutGangl">click here</a> to learn more about Gangl</li>
                 </ul>
                 <!--ROCKETRY DESIGN TEAM-->
                 <b>Waterloo Rocketry Design Team</b>
@@ -320,7 +323,7 @@
                     <li>Active member of sub-team focusing on rocket payload design and payload recovery</li>
                     <li>Iteratively designed deadweight
                         <a href="404_go_error.html" target="blank">cubesat</a> and parachute pin using
-                        <a href="404_go_error.html" target="_blank">SolidWorks CAD</a> for mission critical testing</li>
+                        <a href="https://www.solidworks.com/" target="_blank">SolidWorks CAD</a> for mission critical testing</li>
                     <li>
                         <a href="http://waterloorocketry.com/" target="_blank">Explore Waterloo Rocketry</a>
                     </li>
@@ -335,14 +338,12 @@
                         href="Resume_software_cont_v2_eng_specs.pdf" download="Sammy Robens-Paradise Resume">Download PDF
                     </a>
                     <br>
-                    <br>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="text-center">
                     <!--CONTACT BUTTON-->
                     <button id="moreAboutSammy" type="button" class="btn btn-outline-light btn-lg center">More about Sammy</button>
-                    <br>
                     <br>
                 </div>
             </div>
@@ -351,14 +352,12 @@
                     <!--CONTACT BUTTON-->
                     <button id="aboutProjects" type="button" class="btn btn-outline-light btn-lg center">About Projects</button>
                     <br>
-                    <br>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="text-center">
                     <!--CONTACT BUTTON-->
                     <button id="resumeGoExploring" type="button" class="btn btn-outline-light btn-lg center">Go exploring . . .</button>
-                    <br>
                     <br>
                 </div>
             </div>
@@ -369,18 +368,16 @@
                 <button id="close_resume" type="button" class="btn btn-outline-light btn-lg btn-block">Close Resume</button>
             </div>
             <br>
-            <br>
         </div>
     </div>
     <br>
-
     <!--THIS IS THE END OF THE DROPDOWN FROM THE [RESUME . . .] BUTTON-->
 
     <!--THIS IS THE CLOSE ABOUT SECTIONS BUTTON-->
     <div id="close_about" class="collapse container">
         <div class="row">
             <div class="col-sm-12">
-                <button id="close_about_btn" type="button" class="btn btn-outline-light btn-lg btn-block">collapse...</button>
+                <button id="close_about_btn" type="button" class="btn btn-outline-light btn-lg btn-block">collapse . . .</button>
             </div>
         </div>
     </div>
@@ -419,12 +416,11 @@
             <div class="col-sm-8">
                 <p class="lead">
                     Pynn is an experience based, multimedia platform that will change the way we use social media. Pynn, in it's first iteration
-                    <a href="404_go_error.html">Synthesis Phase</a> of the
-                    <a href="404_go_error.html">Inerative Design Process</a>
-                    (IDP), takes a different approach towards the way we share content by moving the focus from a user's profile to the experiences
-                    users share. Users share multimedia
-                    <b>experiences</b> consisting of video, photos and text with their connections. Pynn compiles this media
-                    into a sharible package, allowing other users t the ability to share those same experiences.
+                    Synthesis Phase of the
+                    <a href="https://www.invisionapp.com/blog/iterative-prototyping-and-feedback-for-better-ux-design/">Inerative Design Process</a>
+                    , takes a different approach towards the way we share content by moving the focus from a user's profile to the user's experiences.
+                    Users share media consisting of video, photos and text with their connections (friends/followers). Pynn
+                    compiles this media into a sharible package, allowing other users the ability to share those same experiences.
                 </p>
                 <p class="lead">
                     Pynn is currently being written in Android Studio, leveraging the scalable flexibility of the IntelliJ Java framwork.
@@ -452,7 +448,7 @@
                     provide solutions. rubikGo is currently in the program architecture phase of design and will soon be
                     moving to the program development phase. The prospective plan for rubikGo is to merge the backend complex
                     algorithm with a GUI to create a workable model that could be leveraged by users to test themselves agains
-                    an algorithm that will always find the fastest solution.
+                    an algorithm that will <b>always</b> find the fastest solution.
                 </p>
                 <p class="lead">
                     RubikGo is currently in the system architecture phase and will be moving to the development phase. The program will be written
@@ -491,8 +487,8 @@
                     design iteration. It was developed by the Gangl Design Team using Android Studio.
                 </p>
                 <p class="lead">
-                    <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">View Design Process Video</a> /
-                    <a href="404_go_error.html">View IDP documentation</a>
+                    <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">Check out the design process video</a> or
+                    <a href="404_go_error.html">view design drocess documentation</a>.
                 </p>
             </div>
         </div>
@@ -510,11 +506,11 @@
         <div class="row">
             <div class="col-sm-8">
                 <p class="lead">
-                    <a href="http://waterloorocketry.com/index.html" target="_blank">Waterloo Rocketry</a> is an Undergraduate design team at the University of Waterloo. Thats right... we
+                    <a href="http://waterloorocketry.com/index.html" target="_blank">Waterloo Rocketry</a> is an Undergraduate design team at the University of Waterloo. Yup... we
                     put the phrase "It's not rocket science" to shame. As an active member of the Payload sub-team, I designed
                     and developed one of the deadweight
                     <a href="https://en.wikipedia.org/wiki/CubeSat" target="_blank">cubsats</a> for the
-                    <a href="http://waterloorocketry.com/vidar3.html" target="_blank"> Vidar III Rocket</a>. I additionally designed the eye-bold that secures the rocket's recovery parachute
+                    <a href="http://waterloorocketry.com/vidar3.html" target="_blank"> Vidar III Rocket</a>. I additionally designed the eye-bolt that secures the rocket's recovery parachute
                     to the rocket's fuselage.
                 </p>
                 <p class="lead">
@@ -559,13 +555,13 @@
                 <p class="lead">
                     As a Software Engineering Co-op student I worked with Environment and Climate Change Canada's Transportation Division on
                     the Regulatory Administration team to assist in the upgrading and testing of the
-                    <abbr title="On-Road Vehicle Engine and Emissions Regulations Database">ORVEER</abbr>
-                    Database to allow auto-manufacturers to submit critical vehicle emissions data to the Government of Canada.
+                    On-Road Vehicle Engine and Emissions Regulations Database
+                    to allow auto-manufacturers to submit critical vehicle emissions data to the Government of Canada.
                 </p>
                 <p class="lead">
-                    As part of the Regulatory Administration team I developed essental documentation and a "User Manual" to pnew rovide instructions
-                    for clients on how to use the databases and submit correct data. I created and implemented test data
-                    for ORVEER as well as wrote SQL scripts design to validate data parced into the database to ensure its
+                    As part of the Regulatory Administration team I developed essental documentation and a "User Manual" to provide guidance
+                    for clients on how to use the database and submit correct data. I created and implemented test data
+                    for the database as well as wrote SQL scripts design to validate data parced into the database to ensure its
                     validity and compliance with federal environmental regulations.
                 </p>
                 <p class="lead">
@@ -627,7 +623,7 @@
         <br>
         <div class="row">
             <div class="col-sm-4">
-                <img src="backend_Art.png" class="img_" width="80%" height="auto" alt="BackEnd Art">
+                <img src="backend_Art.png" class="img_" width="90%" height="auto" alt="BackEnd Art">
             </div>
             <div class="col-sm-8">
                 <p class="lead">
@@ -635,7 +631,7 @@
                     <ul>
                         <li>C++</li>
                         <li>Visual Basic For Applications/Visual Basic (VB/VBA)</li>
-                        <li>Exosure to Java and IntelliJ</li>
+                        <li>Exposure to Java and IntelliJ</li>
                     </ul>
                 </p>
                 <p class="lead">
@@ -645,6 +641,14 @@
                         <li>Experience Using MS Access</li>
                     </ul>
                 </p>
+                <p class="lead">
+                        Administration:
+                        <ul>
+                            <li>Microsoft Suite</li>
+                            <li>Github source control</li>
+                            <li>Technical writing</li>
+                        </ul>
+                    </p>
             </div>
         </div>
         <br>
@@ -671,7 +675,7 @@
                 </p>
             </div>
             <div class="col-sm-4">
-                <img src="hardware_Art.png" class="img_" width="80%" height="auto" alt="Waterloo Rocketry Logo">
+                <img src="hardware_Art.png" class="img_" width="90%" height="auto" alt="Waterloo Rocketry Logo">
             </div>
         </div>
         <br>
@@ -712,7 +716,7 @@
                 <p class="lead">
                     Systems Design Engineering transends the traditional fields of engineering and works to combine the best of
                     <b>all worlds</b>. Systems promotes innovative optimized solutions to some of todays most challenging problems
-                    by tacking them from a socioeconomic perspective. Systems Engineers look for the problem first, and then
+                    by tackling them from a socioeconomic perspective. Systems Engineers look for the problem first, and <b>then</b>
                     derive a solution, rather than attempt to apply a solution to a problem.
                 </p>
                 <p class="lead">
@@ -749,19 +753,19 @@
         <br>
         <div class="row">
             <div class="col-sm-4">
-                <img src="head_shot.png" class="center img_" width="60%" height="auto" alt="Photo of Sammy">
+                <img src="head_shot.png" class="center img_" width="70%" height="auto" alt="Photo of Sammy">
             </div>
             <div class="col-sm-8">
                 <p class="lead">
                     As someone who advocates optimized engineering solutions, I continue on my journey to find the most eloquent and beautiful
                     solutions to the worlds most challening problems. I have always taken an interest in the way humans interact
                     with technology, and more specifically, the way it shapes our
-                    <b>experiences</b>. I chose to study Systems Design Engineering becuase of my inate facination with the
-                    way one users experience of a product or service can shape their understanding of the world, and more
-                    specifically, the uniqueness of each person's experience.
+                    <b>experiences</b>. I chose to study Systems Design Engineering because of my inate facination with the
+                    way one user's experience of a product or service can shape their understanding of the world, and more
+                    specifically, the unique impact of that understanding.
                 </p>
                 <p class="lead">
-                    Through my exposure to software, and my personal persuit of web development I found a keen interest in the connection between
+                    Through my exposure and interest to software, and my personal persuit of web development I found a keen interest in the connection between
                     a user's experience and the interface that is presented to that user.
                 </p>
             </div>
@@ -780,9 +784,9 @@
             <div class="col-sm-8">
                 <p class="lead">
                     How would you define Sammy? My interests vary from guitar to snowboarding (a sport that has landed me with many injury-related
-                    setbacks). I believe that a persons experience shape who they are, and this is all the more relevant
-                    as it relates to experience. As an active individual, I emphasize the importance of physcial Activity
-                    as well as Music in my designs.
+                    setbacks). I believe that a person's experience shapes who they are. As an active individual, I emphasize the importance of physcial Activity
+                    as well as Music in my work. I also advocate accessibility of technology. whether cross-cultural, demographic, or physical, I believe
+                    that technology should  reach all people.
                 </p>
             </div>
             <div class="col-sm-4">
@@ -794,7 +798,7 @@
     <div id="close_about_bottom" class="collapse container">
         <div class="row">
             <div class="col-sm-12">
-                <button id="close_about_btn_bottom" type="button" class="btn btn-outline-light btn-lg btn-block">collapse...</button>
+                <button id="close_about_btn_bottom" type="button" class="btn btn-outline-light btn-lg btn-block">collapse . . .</button>
             </div>
         </div>
         <br>
@@ -822,6 +826,13 @@
                 </div>
                 <div class="col-sm-3 text-center">
                     <a href="https://github.com/SammyRobensParadise/SammyRobensParadise.github.io" target="_blank" class="fa fa-github"></a>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="text-center lead">
+                            <a href="404_go_error.html" target="_blank">Learn about the iterative development of this website</a>
+                        </p>
+                    </div>
                 </div>
             </div>
             <br>
