changes to scroll bar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
-    <nav class="navbar navbar-expand-md navbar-default">
+    <nav class="navbar navbar-expand-md navbar-default nav">
         <a class="navbar-brand active" href="index.html">
             Main
         </a>
@@ -417,7 +417,7 @@
                 <p class="lead">
                     Pynn is an experience based, multimedia platform that will change the way we use social media. Pynn, in it's first iteration
                     Synthesis Phase of the
-                    <a href="https://www.invisionapp.com/blog/iterative-prototyping-and-feedback-for-better-ux-design/">Inerative Design Process</a>
+                    <a href="https://www.invisionapp.com/blog/iterative-prototyping-and-feedback-for-better-ux-design/" target="_blank">Inerative Design Process</a>
                     , takes a different approach towards the way we share content by moving the focus from a user's profile to the user's experiences.
                     Users share media consisting of video, photos and text with their connections (friends/followers). Pynn
                     compiles this media into a sharible package, allowing other users the ability to share those same experiences.
