--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
         crossorigin="anonymous"></script>
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
-    <script type="text/JavaScript">
-        var prevScrollpos = window.pageYOffset; window.onscroll = function() { var currentScrollPos = window.pageYOffset; if (prevScrollpos
-        > currentScrollPos) { document.getElementById("navbarScroll").style.top = "0"; } else { document.getElementById("navbarScroll").style.top
-        = "50px"; } prevScrollpos = currentScrollPos; }
-    </script>
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
@@ -66,7 +61,7 @@
     </div>
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
-    <nav id="navbarScroll" class="navbar navbar-expand-md navbar-default ">
+    <nav id="navbarScroll" class="navbar navbar-expand-md navbar-fixed navbar-default ">
         <a class="navbar-brand active" href="index.html">
             Main
         </a>
