changes to navbar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
-    <nav id="navbarScroll" class="navbar navbar-expand-md navbar-fixed navbar-default ">
+    <nav id="navbarScroll" class="navbar navbar-expand-md sticky-top navbar-fixed navbar-default ">
         <a class="navbar-brand active" href="index.html">
             Main
         </a>
