changes to footer

--- a/index.html
+++ b/index.html
@@ -829,9 +829,13 @@
                 <div class="col-sm-3 text-center">
                     <a href="https://github.com/SammyRobensParadise/SammyRobensParadise.github.io" target="_blank" class="fa fa-github"></a>
                 </div>
+
+            </div>
+            <br>
+            <div class="container">
                 <div class="row">
-                    <div class="col-sm-12">
-                        <p class="text-center lead">
+                    <div class="col-sm-12 text-center">
+                        <p class="lead">
                             <a href="404_go_error.html" target="_blank">Learn about the iterative development of this website</a>
                         </p>
                     </div>
