added new file wireframes.html, and linked it to index.html, the purpose of this page is to provide context about the creation of the website. files where also added these files are wireframe photos for the website that explain the design process

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <p class="lead">
-                            <a href="404_go_error.html" target="_blank">Learn about the iterative development of this website</a>
+                            <a href="wireframes.html" target="_blank">Learn about the iterative development of this website</a>
                         </p>
                     </div>
                 </div>
