bug fix for wire frames

--- a/wireframes.html
+++ b/wireframes.html
@@ -216,7 +216,7 @@
         <br>
         <div class="row">
             <div class="col-sm-12">
-                <img src="firstit1.png" class="center" width="100%" height="auto" alt="Wireframes">
+                <img src="wireframeImgs\firstit1.png" class="center" width="100%" height="auto" alt="Wireframes">
             </div>
         </div>
         <br>
