bug fix attempt w/ wireframes

--- a/wireframes.html
+++ b/wireframes.html
@@ -216,7 +216,7 @@
         <br>
         <div class="row">
             <div class="col-sm-12">
-                <img src="\firstit1.png" class="center" width="100%" height="auto" alt="Wireframes">
+                <img src="firstit1.PNG" class="center" width="100%" height="auto" alt="Wireframes">
             </div>
         </div>
         <br>
@@ -226,7 +226,7 @@
         <br>
         <div class="row">
             <div class="col-sm-12">
-                <img src="secondit2.png" class="center" width="100%" height="auto" alt="Wireframes">
+                <img src="secondit2.PNG" class="center" width="100%" height="auto" alt="Wireframes">
             </div>
         </div>
         <br>
@@ -236,7 +236,7 @@
         <br>
         <div class="row">
             <div class="col-sm-12">
-                <img src="thirdit3.png" class="center" width="100%" height="auto" alt="Wireframes">
+                <img src="thirdit3.PNG" class="center" width="100%" height="auto" alt="Wireframes">
             </div>
         </div>
         <br>
