--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
-    <nav class="navbar navbar-fixed-top navbar-default ">
+    <nav class="navbar navar-expand-md navbar-fixed-top navbar-default ">
         <a class="navbar-brand active" href="index.html">
             Main
         </a>
