simple rollback for spinner

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <br>
         <br>
         <br>
+        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
         <div class="loaderIcon"></div>
         <br>
         <br>
