updated read me and comments in js file

--- a/wireframes.html
+++ b/wireframes.html
@@ -1,6 +1,6 @@
 <!--404_go_error.HTML DOCUMENT ___________________________-->
 <!--CREATED INDEPENDANTLY BY: SAMMY ROBENS-PARADISE-->
-<!--CURRENT AS OF: 2018-06-19______________________-->
+<!--CURRENT AS OF: 2018-06-29______________________-->
 
 <!DOCTYPE html>
 <html>
@@ -33,7 +33,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <!-- Internal JavaScript main.js file-->
+    <!-- Internal JavaScript index.js file-->
     <script src="index.js"></script>
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
@@ -59,7 +59,7 @@
         <br>
         <br>
         <div class="text-center">
-            <p class="lead">Creation of the Webite... Beginning with a process model</p>
+            <p class="lead">Creation of the Webite... beginning with a process model</p>
         </div>
         <br>
         <button type="button" class="btn btn-outline-light btn-lg center" data-toggle="collapse" data-target="#purpose">Purpose</button>
@@ -82,7 +82,7 @@
                 The Website must:
                 <ul>
                     <li>be captivating to users and feature UI that simply displays the technical skillset of Sammy Robens-Paradise</li>
-                    <li>Posess Multi-platform functionality to be displayed on both mobile phones and desktop computers</li>
+                    <li>Posess multi-platform functionality to be displayed on both mobile phones and desktop computers</li>
                     <li>Leave visitors with a good impression and not deter possible clients</li>
                 </ul>
             </p>
@@ -96,7 +96,7 @@
                 Scope:
                 <ul>
                     <li>The website will be written in: html, CSS, JavaScript/JQuery framework</li>
-                    <li>The website willuse the following frameworks: bootstrap 4, Font awesome, bootstrap social, JQuery 3.3.1</li>
+                    <li>The website will use the following frameworks: bootstrap 4, Font awesome, bootstrap social, JQuery 3.3.1</li>
                     <li>The website will use Github's domain and hosting service at SammyRobensParadise.github.io</li>
                     <li>The website will use github's source control and branching tools for the development process</li>
                 </ul>
@@ -105,7 +105,7 @@
         <br>
         <br>
         <h3 class="display-4 text-center">
-                Wireframes
+            Wireframes
         </h3>
         <br>
         <br>
