--- a/index.html
+++ b/index.html
@@ -415,12 +415,12 @@
             </div>
             <div class="col-sm-8">
                 <p class="lead">
-                    Pynn is an experience based, multimedia platform that will change the way we use social media. Pynn, in it's first iteration
+                    Pynn is an experience based, multimedia platform that will change the way we use social media. Pynn, in its first iteration
                     Synthesis Phase of the
                     <a href="https://www.invisionapp.com/blog/iterative-prototyping-and-feedback-for-better-ux-design/" target="_blank">Inerative Design Process</a>
                     , takes a different approach towards the way we share content by moving the focus from a user's profile to the user's experiences.
                     Users share media consisting of video, photos and text with their connections (friends/followers). Pynn
-                    compiles this media into a sharible package, allowing other users the ability to share those same experiences.
+                    compiles this media into a sharible package and allows other users to share those same experiences.
                 </p>
                 <p class="lead">
                     Pynn is currently being written in Android Studio, leveraging the scalable flexibility of the IntelliJ Java framwork.
@@ -447,7 +447,7 @@
                     of a rubik cube. The algorithm will leverage the lighting-fast, low-level computing power of C++ to quickly
                     provide solutions. rubikGo is currently in the program architecture phase of design and will soon be
                     moving to the program development phase. The prospective plan for rubikGo is to merge the backend complex
-                    algorithm with a GUI to create a workable model that could be leveraged by users to test themselves agains
+                    algorithm with a GUI to create a workable model that could be leveraged by users to test themselves against
                     an algorithm that will
                     <b>always</b> find the fastest solution.
                 </p>
@@ -484,7 +484,7 @@
                     prototype and finally a functional high fidelity prototype.
                 </p>
                 <p class="lead">
-                    Gangl incorperated user testing, and the usage of Marvel, and Invision app for the purposes of rapid prototyping and extensive
+                    Gangl incorporated user testing, and the usage of Marvel, and Invision app for the purposes of rapid prototyping and extensive
                     design iteration. It was developed by the Gangl Design Team using Android Studio.
                 </p>
                 <p class="lead">
@@ -716,7 +716,7 @@
                 </p>
                 <p class="lead">
                     Systems Design Engineering transends the traditional fields of engineering and works to combine the best of
-                    <b>all worlds</b>. Systems promotes innovative optimized solutions to some of todays most challenging problems
+                    <b>all worlds</b>. Systems promotes innovative optimized solutions to some of today's most challenging problems
                     by tackling them from a socioeconomic perspective. Systems Engineers look for the problem first, and
                     <b>then</b>
                     derive a solution, rather than attempt to apply a solution to a problem.
@@ -762,7 +762,7 @@
                     As someone who advocates optimized engineering solutions, I continue on my journey to find the most eloquent and beautiful
                     solutions to the worlds most challening problems. I have always taken an interest in the way humans interact
                     with technology, and more specifically, the way it shapes our
-                    <b>experiences</b>. I chose to study Systems Design Engineering because of my inate facination with the
+                    <b>experiences</b>. I chose to study Systems Design Engineering because of my fascination with the
                     way one user's experience of a product or service can shape their understanding of the world, and more
                     specifically, the unique impact of that understanding.
                 </p>
@@ -787,7 +787,7 @@
                 <p class="lead">
                     How would you define Sammy? My interests vary from guitar to snowboarding (a sport that has landed me with many injury-related
                     setbacks). I believe that a person's experience shapes who they are. As an active individual, I emphasize
-                    the importance of physcial Activity as well as Music in my work. I also advocate accessibility of technology.
+                    the importance of physcial activity as well as music in my work. I also advocate accessibility of technology.
                     whether cross-cultural, demographic, or physical, I believe that technology should reach all people.
                 </p>
             </div>
