minor type error update

--- a/wireframes.html
+++ b/wireframes.html
@@ -43,15 +43,17 @@
         <br>
         <br>
         <div class="text-center">
+            <div class="container">
             <h2 class="display-3">Website Development Process</h2>
+            </div>
         </div>
         <br>
         <div class="text-center">
             <p class="lead">The following are snapshots of the prototyping and design process that was involved in the creation of my personal
                 website. While most of the work is not shown, the development of this website followed the iterative design
                 process and a rapid prototyping model that migrated from low fidelity prototype to medium and finally high
-                fidelity Website prototypes. The website is currently on its 4th iteration and first published version (version
-                1.0).
+                fidelity Website prototypes. The website is currently on its 3rd iteration and first published version (version
+                0.1).
             </p>
         </div>
     </div>
