--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <div class="text-center">
                     <!--CONTACT BUTTON-->
                     <a role="btn" type="btn" class="btn btn-outline-light btn-lg center" data-toggle="tooltip" title="Note: the Downloadable PDF may not be identical to the resume displayed on this webpage."
-                        href="Resume.pdf" download="Sammy Robens-Paradise Resume">Download PDF
+                        href="ResumeV2.pdf" download="Sammy Robens-Paradise Resume">Download PDF
                     </a>
                     <br>
                 </div>
